<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.thele.expired.AddActivity"
    android:gravity="center"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/nameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/itemName"
            android:inputType="text|textAutoComplete"
            android:maxLines="1"
            android:imeOptions="actionDone" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/purchaseDateField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/purchaseDate"
            android:inputType="none"
            android:maxLines="1"
            android:focusable="false"
            android:focusableInTouchMode="false" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/expirationDateField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/expirationDate"
            android:inputType="none"
            android:maxLines="1"
            android:focusable="false"
            android:focusableInTouchMode="false" />

    </android.support.design.widget.TextInputLayout>

    <Spinner
        android:id="@+id/storageTypeSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:spinnerMode="dialog"
        android:prompt="@string/storageType"/>

    <Button
        android:id="@+id/addItemButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:onClick="buttonClick"
        android:text="@string/addButtonName"
        android:background="@color/skyBlueLight"
        android:textColor="@android:color/white"/>

</LinearLayout>
