<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.thele.expired.MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <Button
        android:id="@+id/addItemButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="55dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:onClick="goToGetActivity"
        android:text="@string/addButtonName" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:scrollbars="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="100dp"
        android:paddingLeft="18dp"
        android:paddingStart="18dp"
        android:paddingEnd="18dp" />

    <TextView
        android:id="@+id/itemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="70dp"
        android:text="@string/itemName"
        android:textSize="@dimen/font_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/purchaseDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/itemName"
        android:layout_marginLeft="95dp"
        android:layout_marginStart="25dp"
        android:layout_toRightOf="@id/itemName"
        android:layout_toEndOf="@id/itemName"
        android:text="@string/purchaseDate"
        android:textSize="@dimen/font_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/expirationDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/purchaseDate"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:layout_toRightOf="@id/purchaseDate"
        android:layout_toEndOf="@id/purchaseDate"
        android:text="@string/expirationDate"
        android:textSize="@dimen/font_size"
        android:textStyle="bold" />

</RelativeLayout>
